--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "~5.3.2",
-    "gatsby-plugin-image": "^3.3.2",
+    "gatsby": "^5.7.0",
+    "gatsby-plugin-gatsby-cloud": "^5.7.0",
+    "gatsby-plugin-image": "^3.7.0",
+    "gatsby-plugin-local-search": "^2.0.1",
     "gatsby-plugin-manifest": "^5.3.1",
     "gatsby-plugin-offline": "^6.3.1",
     "gatsby-plugin-react-helmet": "^6.3.0",
-    "gatsby-plugin-sharp": "^5.3.2",
+    "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-sass": "^6.7.0",
+    "gatsby-plugin-sharp": "^5.7.0",
     "gatsby-source-filesystem": "^5.3.1",
-    "gatsby-source-wordpress": "^7.3.2",
-    "gatsby-transformer-sharp": "^5.3.1",
+    "gatsby-source-wordpress": "^7.7.0",
+    "gatsby-transformer-sharp": "^5.7.0",
     "html-react-parser": "^3.0.4",
     "lodash": "^4.17.20",
     "postcss": "^8.2.10",
